modified css files

--- a/MVC-SpringBoot/src/main/resources/templates/tasks.html
+++ b/MVC-SpringBoot/src/main/resources/templates/tasks.html
@@ -7,7 +7,7 @@
 <body>
     <div class="main">
         <div id="table-div">
-            <h1 style="color: brown;">Tasks</h1>
+            <h1 style="color: rgb(4, 4, 4);">Tasks</h1>
             <table>
                 <tr>
                     <th>ID</th>
