--- a/MVC-SpringBoot/src/main/resources/templates/create-task.html
+++ b/MVC-SpringBoot/src/main/resources/templates/create-task.html
@@ -5,26 +5,33 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-<h1>Create Task</h1>
-<form th:action="@{/tasks}" th:object="${task}" method="post">
-
-    <label>Name:</label>
-    <input type="text" th:field="*{name}" /><br/>
-
-    <label>Description:</label>
-    <input type="text" th:field="*{description}" /><br/>
-
-    <label>Due Date:</label>
-    <input type="date" th:field="*{dueDate}" /><br/>
-
-    <label>Status:</label>
-    <select th:field="*{status}">
-        <option value="PENDING">PENDING</option>
-        <option value="IN_PROGRESS">IN_PROGRESS</option>
-        <option value="COMPLETED">COMPLETED</option>
-    </select><br/>
-    
-    <button type="submit">Save</button>
-</form>
+    <div>
+        <h1>Create Task</h1>
+        <form th:action="@{/tasks}" th:object="${task}" method="post">
+            <div>
+                <label>Name:</label>
+                <input type="text" th:field="*{name}" /><br/>
+            </div>
+            <div>
+                <label>Description:</label>
+                <input type="text" th:field="*{description}" /><br/>
+            </div>
+            <div>
+                <label>Due Date:</label>
+                <input type="date" th:field="*{dueDate}" /><br/>
+            </div>
+            <div>
+                <label>Status:</label>
+                <select th:field="*{status}">
+                    <option value="PENDING">PENDING</option>
+                    <option value="IN_PROGRESS">IN_PROGRESS</option>
+                    <option value="COMPLETED">COMPLETED</option>
+                </select><br/>
+            </div>
+            <div>
+                <button type="submit">Save</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
