--- a/MVC-SpringBoot/src/main/resources/templates/create-task.html
+++ b/MVC-SpringBoot/src/main/resources/templates/create-task.html
@@ -2,27 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Create Task</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/create-task.css">
 </head>
 <body>
     <div>
         <h1>Create Task</h1>
         <form th:action="@{/tasks}" th:object="${task}" method="post">
             <div>
-                <label>Name:</label>
-                <input type="text" th:field="*{name}" /><br/>
+                <label for="name">Name:</label>
+                <input type="text" th:field="*{name}" id="name" /><br/>
             </div>
             <div>
-                <label>Description:</label>
-                <input type="text" th:field="*{description}" /><br/>
+                <label for="description">Description:</label>
+                <input type="text" th:field="*{description}" id="description"/><br/>
             </div>
             <div>
-                <label>Due Date:</label>
-                <input type="date" th:field="*{dueDate}" /><br/>
+                <label for="due-date">Due Date:</label>
+                <input type="date" th:field="*{dueDate}" id="due-date"/><br/>
             </div>
             <div>
-                <label>Status:</label>
-                <select th:field="*{status}">
+                <label for="status">Status:</label>
+                <select th:field="*{status}" id="status">
                     <option value="PENDING">PENDING</option>
                     <option value="IN_PROGRESS">IN_PROGRESS</option>
                     <option value="COMPLETED">COMPLETED</option>
