--- a/MVC-SpringBoot/src/main/resources/templates/edit-task.html
+++ b/MVC-SpringBoot/src/main/resources/templates/edit-task.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Edit Task</title>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="field">
                     <label class="status" for="status">Status:</label>
-                    <select th:field="*{status}">
+                    <select th:field="*{status}" id="status">
                         <option value="PENDING" th:selected="${task.status == 'PENDING'}">Pending</option>
                         <option value="IN_PROGRESS" th:selected="${task.status == 'IN_PROGRESS'}">In Progress</option>
                         <option value="COMPLETED" th:selected="${task.status == 'COMPLETED'}">Completed</option>
