--- a/MVC-SpringBoot/src/main/resources/templates/tasks.html
+++ b/MVC-SpringBoot/src/main/resources/templates/tasks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Task List</title>
     <link rel="stylesheet" th:href="@{/style.css}" />
@@ -32,7 +32,7 @@
         </div>
         <br/>
         <div>
-            <a href="/tasks/new">Add New Task</a>
+            <a th:href="/tasks/new">Add New Task</a>
         </div>
     </div>
 </body>
