--- a/MVC-SpringBoot/src/main/resources/templates/create-task.html
+++ b/MVC-SpringBoot/src/main/resources/templates/create-task.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Create Task</title>
     <link rel="stylesheet" href="/create-task.css">
