implement CRUD operations in ProjectController

--- a/MVC-SpringBoot/src/main/resources/templates/tasks.html
+++ b/MVC-SpringBoot/src/main/resources/templates/tasks.html
@@ -31,8 +31,8 @@
             </table>
         </div>
         <br/>
-        <div>
-            <a th:href="/tasks/new">Add New Task</a>
+        <div id="new">
+            <a href="@{/tasks/new}">Add New Task</a>
         </div>
     </div>
 </body>
