--- a/MVC-SpringBoot/src/main/resources/static/style.css
+++ b/MVC-SpringBoot/src/main/resources/static/style.css
@@ -22,6 +22,19 @@ html, body{
 #table-div{
     height: 30%;
     width: 70%;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+
+}
+
+#new{
+    height: 10%;
+    width: 10%;
+    border: 2px solid purple;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 table{
