--- a/MVC-SpringBoot/src/main/resources/static/style.css
+++ b/MVC-SpringBoot/src/main/resources/static/style.css
@@ -16,32 +16,33 @@ html, body{
     color: rgb(1, 0, 0);
     padding: 20px;
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 #table-div{
+    margin-left: 100px;
     height: 30%;
     width: 70%;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-
 }
 
 #new{
+    margin-top: 10%;
     height: 10%;
     width: 10%;
-    border: 2px solid purple;
+    text-transform: uppercase;
+    border: 2px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#description{
+    text-transform: capitalize;
 }
 
 table{
     background-color: rgb(217, 210, 234);
     border: 2px solid black;
     border-collapse: collapse;
-    height: 60%;
+    height: 70%;
     width: 90%;
 }
 
