modified view pages and createProject method in controller layer

--- a/MVC-SpringBoot/src/main/resources/templates/create-project.html
+++ b/MVC-SpringBoot/src/main/resources/templates/create-project.html
@@ -15,7 +15,7 @@
                 </div>
                 <div>
                     <label for="tasks">Tasks: </label>
-                    <input type="text" id="tasks" placeholder="Enter tasks"/><br><br>
+                    <input type="text" name="tasksInput" id="tasks" placeholder="Enter tasks"/><br><br>
                 </div>
                 <div>
                     <button type="submit">Save Project</button>
